--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@ https://templatemo.com/tm-570-chain-app-dev
     <div class="row">
       <div class="col-lg-12 text-center" style="margin-top: 30px;">
         <div class="gradient-button">
-          <a href="#" id="show-all-services">Show All Services</a>
+          <button type="button" id="show-all-services" class="btn-reset">Show All Services</button>
         </div>
+        
       </div>
     </div>
     <div id="hidden-services" style="display: none;">
@@ -478,7 +479,7 @@ https://templatemo.com/tm-570-chain-app-dev
       <div class="row">
         <div class="col-lg-12 text-center" style="margin-top: 30px;">
           <div class="gradient-button" id="hide-button-container" style="display: none;">
-            <a href="#" id="hide-all-services">Hide Services</a>
+            <button type="button" id="hide-all-services" class="btn-reset">Hide Services</button>
           </div>
         </div>
       </div>
